🌉🐄 Checkpoint ./index.html:10733491/45

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h4>
       ITS EEEEEEEE MAAAAAAAAA GENATION
     </h4>
-    <a href="https:www.stevenuniverse.com></a>
+    <a href="https://www.stevenuniverse.com"> IM READY! IM READY! IM READY!</a>
     
   </body>
   
