🏇👵 Checkpoint ./index.html:10733491/130

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h4>
     <a href="https://www.stevenuniverse.com"> IM READY! IM READY! IM READY!</a>
     
-    <img scr="https://i.ytimg.com/vi/NaSd2d5rwPE/hqdefault.jpg">
+    <img src="https://i.ytimg.com/vi/NaSd2d5rwPE/hqdefault.jpg">
  
          </body>
                                                                               
